# OzzylogicQt

./: .gitignore  CMakeLists.txt
include/: DataStructures.h  DatabaseManager.h  SQLiteManager.h  StyledOperatorDelegate.h  TreeViewItem.h  TreeViewModel.h
src/: SQLiteManager.cpp  StyledOperatorDelegate.cpp  TreeViewModel.cpp  main.cpp
